--- a/app/stylesheets/components.scss
+++ b/app/stylesheets/components.scss
@@ -41,7 +41,7 @@
 
     @media only screen and (max-width: 1000px) {
       transform: none;
-      borer: 2px solid var(--color-font);
+      border: 2px solid var(--color-font);
     }
   }
 }
